Upgrade to Java 25 and Spring Boot 3.5; modernize code
- Java 8 -> Java 25 (LTS), Spring Boot 2.0.2 -> 3.5.0

- Remove legacy Gradle config (keep Maven)

- Drop obsolete spring-boot-properties-migrator

- Add Spring Boot Actuator and springdoc-openapi

- Convert DTOs to records (Topic, Greeting, Value, Customer, Quote)

- Switch to specific HTTP mappings (@GetMapping/@PostMapping/...)

- Constructor injection; RequestMapping base path on TopicController

- Fix NPE in getTopicWithId: return Optional, 404 via ResponseStatusException

- CopyOnWriteArrayList for thread-safe in-memory store; immutable getAllTopics

- Remove dead gturnquist-quoters.cfapps.io REST call from Application

- Guard JDBC CommandLineRunner with @ConditionalOnBean(JdbcTemplate.class)

- Add JUnit 5 tests (TopicService + TopicController @WebMvcTest + context)

- Add GitHub Actions CI on JDK 25

- Hygiene: expand .gitignore; remove IDE/.iml/target/.idea; refresh README

Co-Authored-By: Bobby Nobakht <bobby.nobakht@cognition.ai>